--- a/projectfrontend/package.json
+++ b/projectfrontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Thansil.github.io/ReactJs",
+  "homepage": "http://Thansil.github.io/SpringBoot-ReactJs",
   "name": "projectfront",
   "version": "0.1.0",
   "private": true,
